--- a/client/views/partials/gps/listView.html
+++ b/client/views/partials/gps/listView.html
@@ -49,6 +49,8 @@
                             NA
                         </td>-->
                         <td data-title="'Status'"  class="clickable-item col-sm-2">{{truck.status}}
+                        </td>
+                        <td data-title="'Share'"  class="clickable-item col-sm-2">
                             | <button class="btn btn-info" ng-click="shareTracking(truck._id)"><i class="fa fa-share-alt" aria-hidden="true"></i></button>
                         </td>
                         <!--<td data-title="'Action'" sortable="'totalPayment'" class="clickable-item col-sm-1">
