--- a/client/views/partials/liveTracking.html
+++ b/client/views/partials/liveTracking.html
@@ -1,4 +1,4 @@
-<div class="login-page" ng-controller="TruckTrackingController" ng-init="loadLiveTracking()">
+<div class="login-page" ng-controller="liveTrackingController" ng-init="loadLiveTracking()">
     <div class="clearfix"></div>
     <div  class="clo-xs-12 ">
         <div class="col-xs-12 gpsListView" >
