--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -181,6 +181,28 @@
                         <label class="focus-effect-for-input" aria-hidden="true">Receivable amount </label>
 
                     </div>
+                    <span ng-if="trip.receivableAmount>0"> <div class=" trip-share">
+                            <div class="checkbox">
+                                <label>
+                                    <input ng-model="trip.reminder" type="checkbox" checked>
+                                    <span class="cr">
+                                        <i class="cr-icon fa fa-check"></i>
+                                    </span>
+                                    Add payment Reminder
+                                </label>
+                            </div>
+                        </div></span>
+                    <span ng-if="trip.reminder">
+                        <div class="form-group col-xs-12">
+            <date-picker id="fitnessExpiry" ng-model="trip.reminderDate"
+                         class="'custom-form-control'" placeholder="'Reminder Date'"></date-picker>
+        </div>
+        <div class="form-group col-xs-12">
+            <input type="text" ng-model="trip.reminderText"
+                   class="form-control custom-form-control" id="name" placeholder="'Reminder Text'">
+
+        </div>
+                    </span>
                 </div>
                 <div class="form-group col-xs-12">
                     <div class=" styling-input-list">
