trips file system changed

--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -290,7 +290,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="form-group col-xs-12">
+                    <div class=" col-xs-12">
+
                         <div class="mt-20">
                             <label>Load Time</label>
                             <div class="form-group">
@@ -298,8 +299,8 @@
                                     <input type="text" class="form-control" datetime-picker="dd-MM-yyyy HH:mm"
                                            is-open="pickerStart.open"
                                            ng-model="trip.startDate" datepicker-options="options"/>
-                                    <span class="input-group-btn">
-            <button type="button" class="btn btn-default" ng-click="openCalendarStartDate($event, 'pickerStart')"><i
+                                    <span class="input-group-btn ">
+            <button type="button" class="btn btn-default date-time-height" ng-click="openCalendarStartDate($event, 'pickerStart')"><i
                     class="fa fa-calendar"></i></button>
           </span>
                                 </p>
@@ -314,8 +315,8 @@
                                     <input type="text" class="form-control" datetime-picker="dd-MM-yyyy HH:mm"
                                            is-open="pickerEnd.open"
                                            ng-model="trip.endDate" datepicker-options="options"/>
-                                    <span class="input-group-btn">
-            <button type="button" class="btn btn-default" ng-click="openCalendarEndDate($event, 'pickerEnd')"><i
+                                    <span class="input-group-btn ">
+            <button type="button" class="btn btn-default date-time-height" ng-click="openCalendarEndDate($event, 'pickerEnd')"><i
                     class="fa fa-calendar"></i></button>
           </span>
                                 </p>
