Fixing tracking issues

--- a/client/views/partials/liveTracking.html
+++ b/client/views/partials/liveTracking.html
@@ -5,7 +5,7 @@
 
             <div class="col-xs-10 col-xs-offset-1 margin-top-120">
                 <div class="text-center">
-                    <h1>Live Tracking</h1>
+                    <h1>Easygaadi Live Tracking</h1>
                 </div>
                 <div>
                     <div id="map" style="width: 100%; height: 500px;"></div>
