--- a/client/views/partials/liveTracking.html
+++ b/client/views/partials/liveTracking.html
@@ -7,9 +7,13 @@
                 <div class="text-center">
                     <h1>Easygaadi Live Tracking</h1>
                 </div>
-                <div>
+                <div ng-if="!message">
                     <div id="map" style="width: 100%; height: 500px;"></div>
                 </div>
+                <div ng-if="message">
+                    <span class="bg-danger">{{message}}</span>
+                </div>
+
             </div>
         </div>
     </div>
