--- a/client/views/partials/userProfile/addingGroup.html
+++ b/client/views/partials/userProfile/addingGroup.html
@@ -18,21 +18,23 @@
                                 <input type="text" class="form-control custom-form-control" ng-model="group.groupName"/>
                                 <label class="focus-effect-for-input" aria-hidden="true">Group Name</label>
                             </div>
-                            <div class="form-group styling-input-list">
-                                <input type="text" class="form-control custom-form-control" ng-model="group.userName"/>
-                                <label class="focus-effect-for-input" aria-hidden="true">User Name</label>
-                            </div>
+
                             <div class="form-group styling-input-list">
                                 <input type="text" class="form-control custom-form-control" ng-model="group.password"/>
                                 <label class="focus-effect-for-input" aria-hidden="true">Password</label>
                             </div>
-                        </div>
-                        <div class="col-sm-4 col-xs-12">
                             <div class="form-group styling-input-list">
                                 <input type="text" class="form-control custom-form-control"
                                        ng-model="group.confirmPassword"/>
                                 <label class="focus-effect-for-input" aria-hidden="true">Confirm Password</label>
                             </div>
+                        </div>
+                        <div class="col-sm-4 col-xs-12">
+                            <div class="form-group styling-input-list">
+                                <input type="text" class="form-control custom-form-control" ng-model="group.userName"/>
+                                <label class="focus-effect-for-input" aria-hidden="true">User Name</label>
+                            </div>
+
                             <div class="form-group styling-input-list">
                                 <input type="text" class="form-control custom-form-control"
                                        ng-model="group.contactName"/>
@@ -57,8 +59,8 @@
                                         <span class="caret"></span></button>
                                     <ul class="dropdown-menu assign-trucks list-inline col-xs-12">
                                         <li ng-repeat="truck in trucks" class="col-xs-5">
-                                            <input type="checkbox" value="{{truck._id}}" ng-model="truckId2[$index]"
-                                                   ng-click="truckSelected(truckId2[$index],truck._id)" id="RegNo{{$index}}">
+                                            <input type="checkbox"  ng-model="truckId2[$index]"
+                                                   ng-change="truckSelected($index,truck._id)" id="RegNo{{$index}}">
                                             <label for="RegNo{{$index}}">{{truck.registrationNo}}</label>
                                         </li>
                                     </ul>
@@ -68,7 +70,7 @@
 
 
                     </div>
-                    <div class="col-xs-12 pall-zero">
+                    <!--<div class="col-xs-12 pall-zero">
                         <div class="form-group erp-gps">
                             <div class="erp">
                                 <div class="checkbox">
@@ -91,7 +93,7 @@
                             </div>
                         </div>
 
-                    </div>
+                    </div>-->
                     <div class="col-xs-4 col-xs-push-4">
                         <div class="alert alert-danger" role="alert" ng-show="group.errors.length">
                             <ul>
