changed file uploading in job and inventory changed groups schema

--- a/client/views/partials/userProfile/addingGroup.html
+++ b/client/views/partials/userProfile/addingGroup.html
@@ -19,7 +19,7 @@
                                 <label class="focus-effect-for-input" aria-hidden="true">Group Name</label>
                             </div>
 
-                            <div class="form-group styling-input-list">
+                           <!-- <div class="form-group styling-input-list">
                                 <input type="text" class="form-control custom-form-control" ng-model="group.password"/>
                                 <label class="focus-effect-for-input" aria-hidden="true">Password</label>
                             </div>
@@ -27,30 +27,16 @@
                                 <input type="text" class="form-control custom-form-control"
                                        ng-model="group.confirmPassword"/>
                                 <label class="focus-effect-for-input" aria-hidden="true">Confirm Password</label>
-                            </div>
-                        </div>
-                        <div class="col-sm-4 col-xs-12">
-                            <div class="form-group styling-input-list">
-                                <input type="text" class="form-control custom-form-control" ng-model="group.userName"/>
-                                <label class="focus-effect-for-input" aria-hidden="true">User Name</label>
-                            </div>
-
-                            <div class="form-group styling-input-list">
-                                <input type="text" class="form-control custom-form-control"
-                                       ng-model="group.contactName"/>
-                                <label class="focus-effect-for-input" aria-hidden="true">Contact Name</label>
-                            </div>
-                            <div class="form-group styling-input-list">
-                                <input type="number" class="form-control custom-form-control"
-                                       ng-model="group.contactPhone"/>
-                                <label class="focus-effect-for-input" aria-hidden="true">Mobile</label>
-                            </div>
+                            </div>-->
                         </div>
                         <div class="col-sm-4 col-xs-12">
                             <div class="form-group styling-input-list">
                                 <input type="text" class="form-control custom-form-control" ng-model="group.location" id="location" ng-change="searchLocation()"/>
                                 <label class="focus-effect-for-input" aria-hidden="true">Location</label>
                             </div>
+
+                        </div>
+                        <div class="col-sm-4 col-xs-12">
 
                             <div class="form-group">
                                 <div class="dropdown pall-zero">
