--- a/client/views/partials/Jobs/add_editJob.html
+++ b/client/views/partials/Jobs/add_editJob.html
@@ -109,8 +109,9 @@
         </div>
         <div class="form-group col-xs-12">
             <div class=" styling-input-list">
-                <input type="file" class="form-control custom-form-control" multiple ng-model="job.file"
-                       ngf-select>
+                <customized-file-upload ng-model="files" folder="'jobs'"
+                                        class="'custom-form-control'" >
+                </customized-file-upload>
             </div>
         </div>
         <div class="form-group col-xs-12">
