--- a/client/views/partials/inventories/add-editInventory.html
+++ b/client/views/partials/inventories/add-editInventory.html
@@ -75,8 +75,10 @@
         </div>
         <div class="form-group col-xs-12">
             <div class=" styling-input-list">
-                <input type="file" class="form-control custom-form-control" multiple ng-model="inventory.file"
-                       ngf-select>
+                <customized-file-upload ng-model="files" folder="'inventory'"
+                                        class="'custom-form-control'" >
+                </customized-file-upload>
+
             </div>
         </div>
         <div class="form-group col-xs-12">
