--- a/client/views/partials/payments/paymentsReceived.html
+++ b/client/views/partials/payments/paymentsReceived.html
@@ -15,7 +15,7 @@
                     <i class="fa fa-search sear" aria-hidden="true"></i>
                 </button>
             </li>
-            <li class="col-sm-3 pall-zero">
+            <li class="col-sm-2 pall-zero">
                 <div class="select-box erp-box">
                     <ui-select ng-model="partyName" theme="select2"
                                title="Choose a person" append-to-body="true"
@@ -38,6 +38,10 @@
             <li class="col-sm-1">
                 <button type="button" ng-click="downloadDetails();" class="btn mailImage">
                     <img src="images/Reports_Download.png"></button>
+            </li>
+            <li class="col-sm-1">
+                <a ui-sref="uploadPayments" type="button"  class="btn mailImage">
+                    <i class="fa fa-upload fa-2x" aria-hidden="true"></i></a>
             </li>
         </ul>
     </div>
