--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-3 pall-zero"><h3>Trips</h3></div>
         <ul class="col-sm-9 pall-zero list-inline">
-            <li class="col-sm-6">
+            <li class="col-sm-5">
                 <form>
                     <div class="input-group stylish-input-group">
                         <input type="text" class="form-control" ng-model="truckNumber1"
@@ -39,6 +39,10 @@
             <li class="col-sm-1">
                 <button type="button" ng-click="downloadDetails();" class="btn mailImage">
                     <img src="images/Reports_Download.png"></button>
+            </li>
+            <li class="col-sm-1">
+                <a ui-sref="uploadTrips" type="button"  class="btn mailImage">
+                    <i class="fa fa-upload fa-2x" aria-hidden="true"></i></a>
             </li>
 
         </ul>
