--- a/client/views/partials/expenses/uploadExpenses.html
+++ b/client/views/partials/expenses/uploadExpenses.html
@@ -12,7 +12,9 @@
         <div class="form-group col-xs-6">
 
             <div class="styling-input-list">
-                <button class="btn btn-info" ng-click="uploadExpenses()">Export</button>
+                <button class="btn btn-info export-button" ng-click="uploadExpenses()">Export</button>
+                <button class="btn btn-danger export-button" ui-sref="expenses">Cancel</button>
+
             </div>
         </div>
     </div>
