--- a/client/views/partials/trips/uploadTrips.html
+++ b/client/views/partials/trips/uploadTrips.html
@@ -12,7 +12,8 @@
         <div class="form-group col-xs-6">
 
             <div class="styling-input-list">
-                <button class="btn btn-info" ng-click="uploadTrips()">Export</button>
+                <button class="btn btn-info export-button" ng-click="uploadTrips()">Export</button>
+                <button class="btn btn-danger export-button" ui-sref="trips">Cancel</button>
             </div>
         </div>
     </div>
