--- a/client/views/partials/trucks/trucks-list.html
+++ b/client/views/partials/trucks/trucks-list.html
@@ -2,7 +2,22 @@
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-3 pall-zero"><h3>Trucks</h3></div>
         <ul class="col-sm-9 pall-zero list-inline">
-            <li class="col-sm-6">
+            <li class="col-sm-3 pos-relative">
+                <div class="select-box erp-box">
+                    <ui-select ng-model="params.truckType" theme="select2"
+                               title="Choose a truck type" append-to-body="true"
+                             >
+                        <ui-select-match placeholder=" Select Truck type" class="form-control ui-select-control">
+                            {{$select.selected.title || title}}
+                        </ui-select-match>
+                        <ui-select-choices
+                                repeat="truckType in addedTruckTypes  | propsFilter: {title: $select.search}">
+                            <div ng-bind-html="truckType.title | highlight: $select.search"></div>
+                        </ui-select-choices>
+                    </ui-select>
+                </div>
+            </li>
+            <li class="col-sm-4">
                 <form>
                     <div class="input-group stylish-input-group">
                         <input type="text" ng-model="truckName1" class="form-control"
@@ -15,7 +30,8 @@
                     </div>
                 </form>
             </li>
-            <li class="col-sm-4 pos-relative">
+
+            <li class="col-sm-3 pos-relative">
                 <div class="select-box erp-box">
                     <ui-select ng-model="truckName" theme="select2"
                                title="Choose a person" append-to-body="true"
