--- a/client/views/partials/liveTracking.html
+++ b/client/views/partials/liveTracking.html
@@ -11,7 +11,7 @@
                     <div id="map" style="width: 100%; height: 500px;"></div>
                 </div>
                 <div ng-if="message">
-                    <span class="bg-danger">{{message}}</span>
+                    <span class="bg-danger" style="">{{message}}</span>
                 </div>
 
             </div>
