--- a/client/views/partials/inventories/inventoriesList.html
+++ b/client/views/partials/inventories/inventoriesList.html
@@ -13,8 +13,8 @@
                 <td data-title="'Inventory Id'" sortable="'id'" class="clickable-item">
                     {{inventory.id}}
                 </td>
-                <td data-title="'Vehicle'" sortable="'id'" class="clickable-item">
-                    {{inventory.trucks[inventory.trucks.length-1].registrationNo}}
+                <td data-title="'Vehicle'" sortable="'vehicle'" class="clickable-item">
+                    {{inventory.vehicle}}
                 </td>
                 <td data-title="'Supplier'" sortable="'supplier'" class="clickable-item">
                     {{inventory.partyId.name}}
