--- a/client/views/index.html
+++ b/client/views/index.html
@@ -151,6 +151,7 @@
                                                 <left-menu label="Trips" ui-sref="trips"></left-menu>
                                                  <left-menu label="Receipts" ui-sref="receipts"></left-menu>
                                                 <left-menu label="Payments" ui-sref="payments"></left-menu>
+                                            <left-menu label="LR" ui-sref="lrs"></left-menu>
                                             </div>
                                         </div>
                                     </div>
