--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -66,17 +66,17 @@
                 </div>
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
-                        <input ng-model="trip.source" type="text" class="form-control custom-form-control" id="source"
+                        <input ng-model="trip.from" type="text" class="form-control custom-form-control" id="source"
                                ng-change="searchSource()">
-                        <label class="focus-effect-for-input" aria-hidden="true">Source</label>
+                        <label class="focus-effect-for-input" aria-hidden="true">From</label>
 
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
-                        <input ng-model="trip.destination" type="text" class="form-control custom-form-control"
+                        <input ng-model="trip.to" type="text" class="form-control custom-form-control"
                                id="destination" ng-change="searchDestination()">
-                        <label class="focus-effect-for-input" aria-hidden="true">Destination</label>
+                        <label class="focus-effect-for-input" aria-hidden="true">To</label>
                     </div>
                 </div>
                 <div class="clearfix"></div>
