--- a/client/views/partials/userProfile/myProfile.html
+++ b/client/views/partials/userProfile/myProfile.html
@@ -6,7 +6,7 @@
                     <ul class="list-inline">
                         <li><a href="#" class="activeProfileTab" ui-sref="myProfile">My Profile</a></li>
                         <li><a href="#" ui-sref="myGroup" ng-show="type==='account'">My Group</a></li>
-                        <li><a href="#" ui-sref="addGroup" ng-show="type==='account'">Add Group</a></li>
+                        <li><a href="#" ui-sref="addGroup" ng-show="type==='account'">Add Group1</a></li>
                     </ul>
                 </div>
 
@@ -21,24 +21,7 @@
 
                     <div class="profile-right col-sm-10">
                         <div class="col-sm-6">
-                            <!--<div class="form-group form-group-custom">
-                                <div class="styling-input-list">
-                                    <input type="text" name="userName" id="userName" readonly
-                                           ng-model="account.profile.userName"
-                                           class="form-control custom-form-control"/>
-                                    <label class="focus-effect-for-input" aria-hidden="true">User Name</label>
-                                </div>
-                                <div class="clearfix"></div>
-                            </div>
-                            <div class="form-group form-group-custom">
-                                <div class="styling-input-list">
-                                    <input type="text" name="mobile" id="mobile"
-                                           ng-model="account.profile.contactPhone"
-                                           class="form-control custom-form-control"/>
-                                    <label class="focus-effect-for-input" aria-hidden="true">Mobile</label>
-                                </div>
-                                <div class="clearfix"></div>
-                            </div>-->
+
                             <div class="form-group form-group-custom">
                                 <div class="styling-input-list">
                                     <input type="text" name="address1"
@@ -100,36 +83,6 @@
                                 </div>
                                 <div class="clearfix"></div>
                             </div>
-
-                        </div>
-
-                        <div class="col-sm-6">
-                            <div class="form-group form-group-custom">
-                                <div class="styling-input-list">
-                                    <input type="text"  name="gst"
-                                           ng-model="account.profile.GST"
-                                           class="form-control custom-form-control"/>
-                                    <label class="focus-effect-for-input" aria-hidden="true">GST</label>
-                                </div>
-                                <div class="clearfix"></div>
-                            </div>
-                            <div class="form-group form-group-custom">
-                                <div class="styling-input-list">
-                                    <input type="text"  name="country"
-                                           ng-model="account.profile.GSTRate"
-                                           class="form-control custom-form-control"/>
-                                    <label class="focus-effect-for-input" aria-hidden="true">GST Rate</label>
-                                </div>
-                                <div class="clearfix"></div>
-                            </div>
-                            <div class="form-group form-group-custom">
-                                <div class="styling-input-list">
-                                    <input type="text" name="email" id="email" ng-model="account.profile.email"
-                                           class="form-control custom-form-control"/>
-                                    <label class="focus-effect-for-input" aria-hidden="true">Email</label>
-                                </div>
-                                <div class="clearfix"></div>
-                            </div>
                             <div class="form-group form-group-custom">
                                 <div class="styling-input-list">
                                     <input type="text" name="totalGroups" id="totalGroups" readonly
@@ -148,9 +101,76 @@
                                     <div class="clearfix"></div>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="col-sm-6">
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text"  name="gst"
+                                           ng-model="account.profile.panNo"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">PAN Number</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text"  name="gst"
+                                           ng-model="account.profile.GST"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">GST Number</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text"  name="country"
+                                           ng-model="account.profile.GSTRate"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">GST Rate</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text"  name="country"
+                                           ng-model="account.profile.igst"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">IGST Rate</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text"  name="country"
+                                           ng-model="account.profile.cgst"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">CGST Rate</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text"  name="country"
+                                           ng-model="account.profile.sgst"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">SGST Rate</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+                            <div class="form-group form-group-custom">
+                                <div class="styling-input-list">
+                                    <input type="text" name="email" id="email" ng-model="account.profile.email"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Email</label>
+                                </div>
+                                <div class="clearfix"></div>
+                            </div>
+
+
                             <div class="clearfix"></div>
                         </div>
-                        <div class="col-xs-12 reset-pass">
+                     <!--   <div class="col-xs-12 reset-pass">
                             <h3>Reset Password</h3>
                             <div class="col-xs-12 col-sm-6 pall-zero">
                                 <div class="form-group form-group-custom">
@@ -195,7 +215,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                </div>
+                                </div>-->
                                 <div class="col-xs-4 col-xs-push-4">
                                     <div class="alert alert-danger" role="alert"
                                          ng-show="account.errors.length">
