--- a/client/views/partials/lrs/lrEdit.html
+++ b/client/views/partials/lrs/lrEdit.html
@@ -2,7 +2,7 @@
     <div class="col-xs-12 account-edit">
         <h2 class="title-name">{{pageTitle}}</h2>
         <form class="mt-10">
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-4">
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
                         <input ng-model="lr.consignorName" type="text" class="form-control custom-form-control"
@@ -79,7 +79,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-4">
                 <div class="form-group col-xs-12">
                     <div class="">
                         <date-picker id="permitExpiry" ng-model="lr.date" placeholder="'LR Date*'"
@@ -174,6 +174,64 @@
 
 
             </div>
+            <div class="col-xs-12 col-sm-4">
+
+                <div class="form-group col-xs-12 form-heading">Actual Weight</div>
+                <div class="form-group col-xs-6">
+
+                    <div class="styling-input-list">
+                        <input ng-model="lr.actualWeight.qtl" type="number" class="form-control custom-form-control">
+                        <label class="focus-effect-for-input" aria-hidden="true">Weight Qtl</label>
+                    </div>
+                </div>
+                <div class="form-group col-xs-6">
+                    <div class="styling-input-list">
+                        <input ng-model="lr.actualWeight.kgs" type="text" class="form-control custom-form-control">
+                        <label class="focus-effect-for-input" aria-hidden="true">Weight KG</label>
+                    </div>
+                </div>
+                <div class="form-group col-xs-12 form-heading">Sender Weight</div>
+                <div class="form-group col-xs-6">
+
+                    <div class="styling-input-list">
+                        <input ng-model="lr.senderWeight.qtl" type="number" class="form-control custom-form-control">
+                        <label class="focus-effect-for-input" aria-hidden="true">Weight Qtl</label>
+                    </div>
+                </div>
+                <div class="form-group col-xs-6">
+                    <div class="styling-input-list">
+                        <input ng-model="lr.senderWeight.kgs" type="text" class="form-control custom-form-control">
+                        <label class="focus-effect-for-input" aria-hidden="true">Weight KG</label>
+                    </div>
+                </div>
+                <div class="form-group col-xs-12 form-heading">Weight Charged</div>
+                <div class="form-group col-xs-6">
+
+                    <div class="styling-input-list">
+                        <input ng-model="lr.weightCharged.qtl" type="number" class="form-control custom-form-control">
+                        <label class="focus-effect-for-input" aria-hidden="true">Weight Qtl</label>
+                    </div>
+                </div>
+                <div class="form-group col-xs-6">
+                    <div class="styling-input-list">
+                        <input ng-model="lr.weightCharged.kgs" type="text" class="form-control custom-form-control">
+                        <label class="focus-effect-for-input" aria-hidden="true">Weight KG</label>
+                    </div>
+                </div>
+                <div class="form-group col-xs-12 form-heading">schedule of damurrage charges</div>
+                <div class="form-group col-xs-6">
+
+                    <div class="styling-input-list">
+                        <input ng-model="lr.schOfDamageCharge.fromDays" type="number" class="form-control custom-form-control">
+                        <label class="focus-effect-for-input" aria-hidden="true">Days from</label>
+                    </div>
+                </div>
+                <div class="form-group col-xs-6">
+                    <div class="styling-input-list">
+                        <input ng-model="lr.schOfDamageCharge.perDay" type="text" class="form-control custom-form-control">
+                        <label class="focus-effect-for-input" aria-hidden="true">Day per Qtl</label>
+                    </div>
+                </div>
             <div class="clearfix"></div>
 
             <div class="col-xs-12">
