--- a/client/views/index.html
+++ b/client/views/index.html
@@ -182,6 +182,7 @@
                                         <div id="routeConfig" class="panel-collapse collapse">
                                             <div class="panel-body custom-panel-body">
                                                 <left-menu label="routeConfig" ui-sref="routeConfig"></left-menu>
+                                                <left-menu label="GeoFences" ui-sref="geoFence"></left-menu>
                                             </div>
                                         </div>
                                     </div>
