--- a/client/views/partials/geoFences/add_editgeoFence.html
+++ b/client/views/partials/geoFences/add_editgeoFence.html
@@ -1,4 +1,4 @@
-<div class="main-right col-xs-12" ng-controller="AddEditCtrl">
+<div class="main-right col-xs-12" ng-controller="AddEditGeoLocationCtrl">
     <div class="col-xs-12 account-edit">
         <h2 class="title-name">{{title}}</h2>
         <div class="col-sm-6 col-xs-12">
