geo fences reports completed

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -183,6 +183,7 @@
                                             <div class="panel-body custom-panel-body">
                                                 <left-menu label="routeConfig" ui-sref="routeConfig"></left-menu>
                                                 <left-menu label="GeoFences" ui-sref="geoFence"></left-menu>
+                                                <left-menu label="GeoFencesReports" ui-sref="GeoFencesReports"></left-menu>
                                             </div>
                                         </div>
                                     </div>
