--- a/client/views/partials/geoFences/GeoFencesReports.html
+++ b/client/views/partials/geoFences/GeoFencesReports.html
@@ -1,6 +1,40 @@
 <div class="main-right col-xs-12" ng-controller="GeoFencesReportsListController">
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-3 pall-zero"><h3>Geo Fences Reports</h3></div>
+        <div class="col-xs-9 pall-zero">
+            <ul class="list-inline report-expense">
+                <li class="filterFromDate">
+                    <date-picker ng-model="filters.fromDate" past-present="'pastPresentDate'"
+                                 class="'textfield'" placeholder="'from date'">
+                    </date-picker>
+                </li>
+                <li class="filterToDate">
+                    <date-picker ng-model="filters.toDate"  past-present="'pastPresentDate'"
+                                 class="'textfield'" placeholder="'to date'"></date-picker>
+                </li>
+                <li class="filterToDate pall-zero pos-relative">
+                    <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                    <input type="text" ng-model="filters.regNumber"
+                           uib-typeahead="truck.registrationNo for truck in trucksList | filter:$viewValue"
+                           class="form-control textfield" typeahead-min-length="1"
+                           typeahead-on-select="selectTruckId($item)"
+
+                           typeahead-select-on-exact="true" placeholder="Type Reg No"
+                           typeahead-no-results="noTruck" autocomplete="false">
+
+                    <div ng-show="noTrucks">
+                        <i class="glyphicon glyphicon-remove red"></i>
+                        <span class="red"> No Results Found </span>
+                    </div>
+
+                </li>
+                <li class="col-sm-1 pall-zero">
+                    <button type="submit" ng-click="getCount();" class="btn go">
+                        <i class="fa fa-search sear" aria-hidden="true"></i>
+                    </button>
+                </li>
+            </ul>
+        </div>
 
     </div>
 
