--- a/client/views/partials/gps/listView.html
+++ b/client/views/partials/gps/listView.html
@@ -11,7 +11,7 @@
                             <div class="input-group stylish-input-group">
                                 <input type="text" ng-model="truckName" class="form-control" placeholder="Search by vehicle number">
                                 <span class="input-group-addon">
-                        <button type="submit" ng-click="getAllVehiclesLocation(truckName)">
+                        <button type="submit">
                            <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
