--- a/client/views/partials/inventories/inventoriesList.html
+++ b/client/views/partials/inventories/inventoriesList.html
@@ -1,6 +1,36 @@
 <div class="main-right col-xs-12" ng-controller="InventoryListCtrl">
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-3 pall-zero"><h3>Inventories</h3></div>
+        <ul class="col-sm-9 pall-zero list-inline">
+            <li class="col-sm-1 pall-zero"></li>
+            <li class="col-sm-4 pall-zero">
+                <form>
+                    <div class="input-group stylish-input-group">
+                        <input type="text" ng-model="inventory.inventory" class="form-control"
+                               placeholder="Search By Inventory">
+                        <span class="input-group-addon">
+                        <button type="submit" ng-click="getInventories()">
+                           <i class="fa fa-search sear" aria-hidden="true"></i>
+                        </button>
+                    </span>
+                    </div>
+                </form>
+            </li>
+            <li class="col-sm-1 pall-zero"></li>
+            <li class="col-sm-5 pall-zero">
+                <form>
+                    <div class="input-group stylish-input-group">
+                        <input type="text" ng-model="inventory.truckName" class="form-control"
+                               placeholder="Search By vehicle number">
+                        <span class="input-group-addon">
+                        <button type="submit" ng-click="getInventories()">
+                           <i class="fa fa-search sear" aria-hidden="true"></i>
+                        </button>
+                    </span>
+                    </div>
+                </form>
+            </li>
+        </ul>
     </div>
 
     <div class="mt-10">
